--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
 					</li>
 				</ul>
 			</div>
-			<div class="nav-item nav-phone-wrapper ml-auto">
-				<a class="nav-link SignUp-btn" href="https://pse.is/UEL9U" target="_blank">
+			<!-- <div class="nav-item nav-phone-wrapper ml-auto">
+				<a class="nav-link SignUp-btn" href="https://pse.is/U84MU" target="_blank">
 					<span class="nav-text-phone">點此報名</span>
 				</a>
-			</div>
+			</div> -->
 
 		</nav>
 		<div class="nav-item ml-auto">
-			<a class="nav-link SignUp-btn-m" href="https://pse.is/UEL9U" target="_blank">
+			<a class="nav-link SignUp-btn-m" href="https://pse.is/U84MU" target="_blank">
 				<span class="nav-text-phone">點此報名</span>
 			</a>
 		</div>
@@ -136,7 +136,7 @@
 							<p class="mt-2" style="letter-spacing: -1px!important;">參賽團隊應至<a class="text-signup-1" href="https://pse.is/UEL9U" target="_blank">HackMD共筆協作系統</a>完成提案內容，並至Google表單鏈結進行組隊報名，提供聯絡人資訊。
 								參賽團隊應於受理期間內完成並提交提案資料。
 								</p>
-							<a href="https://pse.is/UEL9U" target="_blank"><button class="btn">點此報名</button></a>
+							<a href="https://pse.is/U84MU" target="_blank"><button class="btn">點此報名</button></a>
 						</div>
 					</div>
 					<div class="col-md-12 col-lg-4">
@@ -181,8 +181,7 @@
 							</div>
 							<div class="col-md-7 pr-5 pl-5 pb-5 score-box">
 								<div class="
-								finals-text mb-3">決選</div> 取前三名，創新性占30%、可行性占40%、社會影響力及民
-								眾參與度占30%（三個面向都由評審評分）
+								finals-text mb-3">決選</div> 取前三名，創新性占30%、可行性占40%、社會資源整合程度占30%（三個面向都由評審評分）
 							</div>
 						</div>
 					</div>
@@ -226,7 +225,7 @@
 						</div>
 					</div>
 				</div>
-				<p class="mt-5 winner-caption">🏆&nbsp;&nbsp;優勝團隊之提案成果以及團隊未來將展示於國家發展委員會之地方創生入口網曝光&nbsp;&nbsp;🏆</p>
+				<p class="mt-5 winner-caption">🏆&nbsp;&nbsp;優勝團隊之提案成果未來將展示於國家發展委員會之地方創生入口網曝光&nbsp;&nbsp;🏆</p>
 			</div>
 			<div id="content4" class="container mt-5">
 				<h1 class="title-style-box mt-5">初選票選機制</h1>
@@ -248,10 +247,10 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
+						<!-- <tr>
 							<td>8月28日(五)</td>
 							<td>初審入選名單出爐啦！ </td>
-						</tr>
+						</tr> -->
 						<tr>
 							<td>7月20日(一)</td>
 							<td><a href="https://pse.is/UEL9U" class="table-signup-1">2020年地方創生黑客松徵件開跑啦！</a></td>
