--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 					</li>
 				</ul>
 			</div>
-			<!-- <div class="nav-item nav-phone-wrapper ml-auto">
+			<div class="nav-item nav-phone-wrapper ml-auto">
 				<a class="nav-link SignUp-btn" href="https://pse.is/U84MU" target="_blank">
 					<span class="nav-text-phone">點此報名</span>
 				</a>
-			</div> -->
+			</div>
 
 		</nav>
 		<div class="nav-item ml-auto">
