--- a/index.html
+++ b/index.html
@@ -402,8 +402,7 @@
 					<div class="row">
 						<div class="col-md-12 col-lg-5 contact-box"><i class="fas fa-user mr-3"></i>聯絡窗口：地創黑客松團隊小組</div>
 						<div class="col-md-12 col-lg-7 contact-box"><i
-								class="fas fa-phone-alt mr-3"></i>諮詢電話：02-8692-5588#6343 或
-							02-7707-4907
+								class="fas fa-phone-alt mr-3"></i>諮詢電話：02-8692-5588#6343 或 02-7707-4800 #925
 						</div>
 						<div class="col-md-12 col-lg-5 contact-box"><i
 								class="fas fa-envelope mr-3"></i>諮詢Email：108regional.dfcs@gmail.com</div>
