--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
 	<link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
 	<link rel="icon" href="./img/favicon-img.png" type="image/x-icon" />
-	<script language="javascript">window.location.href="https://twrrnat.github.io/hackathon"</script>
+	<script language="javascript">window.location.href="https://www.twrr.ndc.gov.tw/hackathon/"</script>
 </head>
 
 <body>
